
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([gorilla], [0.1], [bernardomarques5@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([subdir-objects foreign -Wall -Werror])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 eva-engine/Makefile
                 eva-engine/command-engine/Makefile
                 eva-engine/common/Makefile
                 eva-engine/view-engine/Makefile])
AC_OUTPUT
